--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "packageManager": "bun",
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
